--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.87.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "googleapis": "^169.0.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "pg": "^8.16.3",
