--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
-    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.14.0",
     "lucide-react": "^0.561.0",
     "next": "16.0.10",
     "pg": "^8.16.3",
